# kzero

./: .gitattributes  Cargo.toml  Makefile  README.md  block_weights.rs  rust-toolchain.toml
frame/zklogin/: Cargo.toml
frame/zklogin/src/: jwk.rs  lib.rs  offchain_worker.rs  tests.rs
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs  zklogin_benchmarking.rs
primitives/runtime/: Cargo.toml
primitives/runtime/src/: circom.rs  error.rs  jwk.rs  lib.rs  pvk.rs  test_helper.rs  tests.rs  utils.rs  zk_input.rs  zk_sig.rs
primitives/zklogin/: Cargo.toml
primitives/zklogin-runtime/src/: lib.rs
primitives/zklogin-support/: Cargo.toml
primitives/zklogin-support/src/: circom.rs  jwk.rs  lib.rs  pvk.rs  test_helper.rs  tests.rs
primitives/zklogin-support/test-circuits/: test_input.json
primitives/zklogin/src/: circom.rs  error.rs  jwk.rs  lib.rs  pvk.rs  test_helper.rs  tests.rs  traits.rs  utils.rs  zk_input.rs
primitives/zksig/: Cargo.toml
primitives/zksig/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs  tests.rs
scripts/setup/: dev_setup.sh
tests/tool/: Cargo.toml
tests/tool/src/: main.rs
