[package]
name = "pallet-zklogin"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# serde
# TODO remove serde_json, replace it by re-export from `primitive-zklogin`
serde_json = { workspace = true, default-features = false }
# encode/decode
scale-codec = { workspace = true, default-features = false, features = ["derive"] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
# log
log = { version = "0.4.17", default-features = false }
# substrate
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
# zkloign
primitive-zklogin = { workspace = true, default-features = false }

[dev-dependencies]
frame-executive = { workspace = true, features = ["default"] }
pallet-balances = { workspace = true, features = ["default"] }
pallet-timestamp = { workspace = true, features = ["default"] }
primitive-zklogin = { workspace = true, features = ["default", "testing"] }

[features]
default = ["std"]
std = [
    # serde
    "serde_json/std",
    # encode/decode
    "scale-codec/std",
    "scale-info/std",
    # log
    "log/std",
    # substrate
    "frame-support/std",
    "frame-system/std",
    "sp-io/std",
    "sp-std/std",
    "sp-core/std",
    "sp-runtime/std",
    # zklogin
    "primitive-zklogin/std",
]

runtime-benchmarks = [
    "sp-runtime/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "sp-runtime/try-runtime",
]
