[package]
name = "zklogin-runtime"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
ark-bn254 = { version = "0.4.0", default-features = false, features = ["curve"] }
ark-crypto-primitives = { version = "=0.4.0", default-features = false }
ark-ff = { version = "0.4.1", default-features = false, features = ["asm"] }
ark-groth16 = { git = "https://github.com/arkworks-rs/groth16", default-features = false }
ark-relations = { version = "0.4.0", default-features = false }
base64ct = { version = "1.5.3", features = ["alloc"] }
ff = { version = "0.13.0", default-features = false, features = ["derive"] }
num-bigint = { version = "0.4.4", default-features = false }
poseidon-ark = { git = "https://github.com/dejavukong/poseidon-ark", branch = "no-std", default-features = false }
scale-codec = { workspace = true, default-features = false, features = ["derive"] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
serde = { workspace = true, optional = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

[features]
runtime-benchmarks = [
    "sp-runtime/runtime-benchmarks",
]
try-runtime = [
    "sp-runtime/try-runtime",
]
default = ["std"]
std = [
    "serde/std",
    "scale-codec/std",
    "scale-info/std",
    "sp-runtime/std",
    "sp-core/std",
    "sp-io/std",
    "sp-std/std",
    # zk
    "ark-crypto-primitives/std",
    "ark-groth16/std",
    "ark-bn254/std",
    "ark-relations/std",
    "ff/std",
    "ark-ff/std",
    "poseidon-ark/std",
    "base64ct/std",
    "num-bigint/std",
]

# Serde support without relying on std features.
serde = [
    "dep:serde",
    "scale-info/serde",
    "sp-core/serde",
    "sp-runtime/serde",
]
