[package]
name = "primitive-zklogin"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
# serde
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true }
# encode/decode
scale-codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }
# others
base64ct = { version = "1.5.3", features = ["alloc"] }

# zk primitives
ark-bn254 = { version = "0.4.0", default-features = false, features = ["curve"] }
ark-crypto-primitives = { version = "=0.4.0", default-features = false }
ark-ff = { version = "0.4.1", default-features = false, features = ["asm"] }
ark-groth16 = { git = "https://github.com/arkworks-rs/groth16", default-features = false }
ark-relations = { version = "0.4.0", default-features = false }
ff = { version = "0.13.0", default-features = false, features = ["derive"] }
num-bigint = { version = "0.4.4", default-features = false }
poseidon-ark = { git = "https://github.com/dejavukong/poseidon-ark", branch = "no-std", default-features = false }

# substrate
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# jwk
jsonwebtoken = { workspace = true }

[dev-dependencies]
serde = { workspace = true, features = ["std", "derive"] }

[features]
runtime-benchmarks = [
    "sp-runtime/runtime-benchmarks",
]
try-runtime = [
    "sp-runtime/try-runtime",
]
default = ["std"]
std = [
    # serde
    "serde_json/std",
    # encode/decode
    "scale-codec/std",
    "scale-info/std",
    # others
    "base64ct/std",
    # zk primitives
    "ark-crypto-primitives/std",
    "ark-groth16/std",
    "ark-bn254/std",
    "ark-relations/std",
    "ff/std",
    "ark-ff/std",
    "poseidon-ark/std",
    "num-bigint/std",
    # substrate
    "sp-runtime/std",
    "sp-core/std",
    "sp-io/std",
    "sp-std/std",
    # jwk
    "jsonwebtoken/std",
]
testing = [
    "serde/std",
]
