[package]
name = "zklogin-signature"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
# encode/decode
scale-codec = { workspace = true, default-features = false, features = ["derive"] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }

# substrate
sp-runtime = { workspace = true }

# zklogin
zp-zklogin = { path = "../zklogin", default-features = false }

[features]
runtime-benchmarks = [
    "sp-runtime/runtime-benchmarks",
]
try-runtime = [
    "sp-runtime/try-runtime",
]
default = ["std"]
std = [
    "scale-codec/std",
    "scale-info/std",
    # substrate
    "sp-runtime/std",
    # zklogin
    "zp-zklogin/std",
]
testing = []
# Serde support without relying on std features.
serde = [
    #    "dep:serde",
    "scale-info/serde",
    "sp-runtime/serde",
]
