[package]
name = "tool"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
hex = "0.4.3"
hex-literal = "0.4.1"
# substrate
frame-support = { workspace = true, features = ["default"] }
frame-system = { workspace = true, features = ["default"] }
pallet-transaction-payment = { workspace = true, features = ["default"] }
scale-codec = { package = "parity-scale-codec", workspace = true, features = ["default"] }
sp-core = { workspace = true, features = ["default"] }
sp-runtime = { workspace = true, features = ["default"] }
# local
node-template = { workspace = true }
primitive-zklogin = { workspace = true, features = ["default", "testing"] }
